feat(collection): refactor aliasing system with improved types and utils
Refactored the aliasing system to utilize new type utilities and to simplify the API. The `AliasMap` and `Alias` types have been replaced with `Aliased<T, A>` and the related utilities to allow for more concise and type-safe aliasing of object properties. This change improves the developer experience by providing clearer type inference and more reliable code completion. The old types have been removed to streamline the module and avoid redundancy. The accompanying tests have been updated to cover the new functionality and ensure backward compatibility.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,9 +13,6 @@
     "directory": "packages/types"
   },
   "exports": {
-    "./Alias": {
-      "types": "./dist/Alias.d.ts"
-    },
     "./Any": {
       "types": "./dist/Any.d.ts"
     },
@@ -235,6 +232,9 @@
     "./NumberPositive": {
       "types": "./dist/NumberPositive.d.ts"
     },
+    "./Optional": {
+      "types": "./dist/Optional.d.ts"
+    },
     "./Overloads": {
       "types": "./dist/Overloads.d.ts"
     },
@@ -267,6 +267,9 @@
     },
     "./StringLiteral": {
       "types": "./dist/StringLiteral.d.ts"
+    },
+    "./StringMaybeLitteral": {
+      "types": "./dist/StringMaybeLitteral.d.ts"
     },
     "./StringNumber": {
       "types": "./dist/StringNumber.d.ts"
