feat(eslint-config): refine ESLint config for Vue and TypeScript
Refactor ESLint configuration to better support Vue files with TypeScript. Vue-specific rules are now correctly applied to `.vue` files by including the `.vue` extension in the ESLint parser options. This change also introduces the ability to use inline type imports in Vue files, enhancing consistency with TypeScript's type import preferences. The `typescript.js` config no longer incorrectly targets `.vue` files, ensuring that TypeScript and Vue rules are separately managed. Additionally, the package.json is updated to explicitly set the main entry file.

These improvements facilitate a more seamless developer experience when working with Vue and TypeScript by ensuring that linting rules are correctly and efficiently applied.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,6 +10,7 @@
     "url": "git+https://github.com/shorwood/unshared.git",
     "directory": "packages/eslint-config"
   },
+  "main": "./lib/index.js",
   "module": "./lib/index.js",
   "files": [
     "lib",
