--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -8,124 +8,143 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shorwood/unshared.git",
+    "url": "git@github.com:shorwood/unshared.git",
     "directory": "packages/collection"
   },
   "exports": {
-    "arrayify": {
-      "require": "./dist/arrayify.cjs",
-      "import": "./dist/arrayify.js"
+    "./alias": {
+      "require": "./dist/alias.cjs",
+      "types": "./dist/alias.d.ts",
+      "import": "./dist/alias.js"
     },
-    "chunk": {
+    "./chunk": {
       "require": "./dist/chunk.cjs",
+      "types": "./dist/chunk.d.ts",
       "import": "./dist/chunk.js"
     },
-    "compact": {
+    "./clone": {
+      "require": "./dist/clone.cjs",
+      "types": "./dist/clone.d.ts",
+      "import": "./dist/clone.js"
+    },
+    "./collapse": {
+      "require": "./dist/collapse.cjs",
+      "types": "./dist/collapse.d.ts",
+      "import": "./dist/collapse.js"
+    },
+    "./compact": {
       "require": "./dist/compact.cjs",
+      "types": "./dist/compact.d.ts",
       "import": "./dist/compact.js"
     },
-    "compare": {
-      "require": "./dist/compare.cjs",
-      "import": "./dist/compare.js"
+    "./deleteProperty": {
+      "require": "./dist/deleteProperty.cjs",
+      "types": "./dist/deleteProperty.d.ts",
+      "import": "./dist/deleteProperty.js"
     },
-    "defaults": {
-      "require": "./dist/defaults.cjs",
-      "import": "./dist/defaults.js"
-    },
-    "discard": {
-      "require": "./dist/discard.cjs",
-      "import": "./dist/discard.js"
-    },
-    "every": {
-      "require": "./dist/every.cjs",
-      "import": "./dist/every.js"
-    },
-    "filter": {
+    "./filter": {
       "require": "./dist/filter.cjs",
+      "types": "./dist/filter.d.ts",
       "import": "./dist/filter.js"
     },
-    "get": {
+    "./get": {
       "require": "./dist/get.cjs",
+      "types": "./dist/get.d.ts",
       "import": "./dist/get.js"
     },
-    "groupBy": {
-      "require": "./dist/groupBy.cjs",
-      "import": "./dist/groupBy.js"
+    "./group": {
+      "require": "./dist/group.cjs",
+      "types": "./dist/group.d.ts",
+      "import": "./dist/group.js"
     },
-    "immutable": {
+    "./immutable": {
       "require": "./dist/immutable.cjs",
+      "types": "./dist/immutable.d.ts",
       "import": "./dist/immutable.js"
     },
-    "*": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+    "./isIterable": {
+      "require": "./dist/isIterable.cjs",
+      "types": "./dist/isIterable.d.ts",
+      "import": "./dist/isIterable.js"
     },
-    "map": {
-      "require": "./dist/map.cjs",
-      "import": "./dist/map.js"
+    "./mapEntries": {
+      "require": "./dist/mapEntries.cjs",
+      "types": "./dist/mapEntries.d.ts",
+      "import": "./dist/mapEntries.js"
     },
-    "mapKeys": {
+    "./mapKeys": {
       "require": "./dist/mapKeys.cjs",
+      "types": "./dist/mapKeys.d.ts",
       "import": "./dist/mapKeys.js"
     },
-    "mapValues": {
+    "./mapValues": {
       "require": "./dist/mapValues.cjs",
+      "types": "./dist/mapValues.d.ts",
       "import": "./dist/mapValues.js"
     },
-    "mergeDeep": {
-      "require": "./dist/mergeDeep.cjs",
-      "import": "./dist/mergeDeep.js"
-    },
-    "omit": {
+    "./omit": {
       "require": "./dist/omit.cjs",
+      "types": "./dist/omit.d.ts",
       "import": "./dist/omit.js"
     },
-    "overwrite": {
+    "./overwrite": {
       "require": "./dist/overwrite.cjs",
+      "types": "./dist/overwrite.d.ts",
       "import": "./dist/overwrite.js"
     },
-    "pick": {
+    "./pick": {
       "require": "./dist/pick.cjs",
+      "types": "./dist/pick.d.ts",
       "import": "./dist/pick.js"
     },
-    "sample": {
+    "./sample": {
       "require": "./dist/sample.cjs",
+      "types": "./dist/sample.d.ts",
       "import": "./dist/sample.js"
     },
-    "set": {
+    "./set": {
       "require": "./dist/set.cjs",
+      "types": "./dist/set.d.ts",
       "import": "./dist/set.js"
     },
-    "shuffle": {
+    "./shuffle": {
       "require": "./dist/shuffle.cjs",
+      "types": "./dist/shuffle.d.ts",
       "import": "./dist/shuffle.js"
     },
-    "some": {
-      "require": "./dist/some.cjs",
-      "import": "./dist/some.js"
+    "./toArray": {
+      "require": "./dist/toArray.cjs",
+      "types": "./dist/toArray.d.ts",
+      "import": "./dist/toArray.js"
     },
-    "sortBy": {
-      "require": "./dist/sortBy.cjs",
-      "import": "./dist/sortBy.js"
+    "./toDefault": {
+      "require": "./dist/toDefault.cjs",
+      "types": "./dist/toDefault.d.ts",
+      "import": "./dist/toDefault.js"
     },
-    "uniq": {
-      "require": "./dist/uniq.cjs",
-      "import": "./dist/uniq.js"
+    "./toUnique": {
+      "require": "./dist/toUnique.cjs",
+      "types": "./dist/toUnique.d.ts",
+      "import": "./dist/toUnique.js"
     },
-    "uniqBy": {
-      "require": "./dist/uniqBy.cjs",
-      "import": "./dist/uniqBy.js"
-    },
-    "values": {
-      "require": "./dist/values.cjs",
-      "import": "./dist/values.js"
+    ".": {
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     }
   },
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch"
+    "build": "pnpm build:indexes && pnpm build:bundle && pnpm build:packageJson",
+    "build:bundle": "tsx ../../scripts/build.ts",
+    "build:indexes": "tsx ../../scripts/buildIndexes.ts",
+    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts"
   },
   "devDependencies": {
     "@unshared/types": "workspace:*"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ]
 }
