chore(boolean): updated repository URL and package version
Updated the repository URL in `package.json` to use the `git+ssh` protocol for better security. Additionally, incremented the package version to `1.0.0` to reflect the new changes and improvements made to the package.

--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unshared/boolean",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "sideEffects": false,
   "description": "Boolean logic functions",
@@ -10,7 +10,7 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git@github.com:shorwood/unshared.git",
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/boolean"
   },
   "exports": {
