--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unshared/types",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git@github.com:shorwood/unshared.git",
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/types"
   },
   "exports": {
@@ -279,9 +279,6 @@
     },
     "./StringSplit": {
       "types": "./dist/StringSplit.d.ts"
-    },
-    "./Tokenize": {
-      "types": "./dist/Tokenize.d.ts"
     },
     "./Trim": {
       "types": "./dist/Trim.d.ts"
