--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shorwood/unshared.git"
+    "url": "git+ssh://git@github.com/shorwood/unshared.git"
   },
   "scripts": {
     "build": "tsx ./scripts/build.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest --watch",
-    "test:ci": "vitest --run",
+    "test:ci": "vitest --run --typecheck --coverage",
     "test:ui": "vitest --ui",
-    "test:types": "vitest typecheck",
+    "test:types": "vitest --typecheck",
     "test:coverage": "vitest --coverage",
     "commit": "tsx ./scripts/commit.ts",
     "commit:lint": "commitlint --edit",
@@ -25,7 +25,6 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
-    "@changesets/cli": "2.27.1",
     "@commitlint/config-angular": "18.6.0",
     "@commitlint/config-conventional": "18.6.0",
     "@commitlint/config-pnpm-scopes": "18.4.4",
