--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@unshared/eslint-config",
+  "version": "1.0.0",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
@@ -19,7 +20,7 @@
   ],
   "peerDependencies": {
     "eslint": ">=8.0.0",
-    "typescript": ">=4.0.0"
+    "typescript": ">=5.0.0"
   },
   "peerDependenciesMeta": {
     "typescript": {
@@ -27,29 +28,29 @@
     }
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@typescript-eslint/parser": "7.1.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-antfu": "2.1.2",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-html": "7.1.0",
+    "eslint-plugin-html": "8.0.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.0.3",
+    "eslint-plugin-jsdoc": "48.2.0",
     "eslint-plugin-jsonc": "2.13.0",
     "eslint-plugin-markdown": "3.0.1",
     "eslint-plugin-n": "16.6.2",
     "eslint-plugin-perfectionist": "2.5.0",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-sonarjs": "0.23.0",
-    "eslint-plugin-unicorn": "50.0.1",
-    "eslint-plugin-vitest": "0.3.20",
-    "eslint-plugin-vue": "9.20.1",
+    "eslint-plugin-sonarjs": "0.24.0",
+    "eslint-plugin-unicorn": "51.0.1",
+    "eslint-plugin-vitest": "0.3.22",
+    "eslint-plugin-vue": "9.22.0",
     "eslint-plugin-yml": "1.12.2",
     "jsonc-eslint-parser": "2.4.0"
   },
   "devDependencies": {
-    "@types/eslint": "8.56.2",
-    "eslint": "8.56.0",
+    "@types/eslint": "8.56.5",
+    "eslint": "8.57.0",
     "typescript": "5.3.3"
   }
 }
