feat(color): overhaul color handling and introduce new utilities
Significantly restructured the color package, removing outdated utilities and introducing new ones for enhanced color manipulation and conversion. This change aims to simplify color operations and provide more flexible and powerful tools for working with colors in various formats. Introduced utilities include `createColorHsl`, `createColorPalette`, `createColorSrgb`, `hexToSrgb`, `hslToSrgb`, `srgbToHex`, `srgbToHsl`, and `srgbToInteger`. Removed utilities include `colorAdd`, `colorDivide`, `colorLighten`, `colorMerge`, `colorMultiply`, `colorSaturate`, `colorShift`, `colorTransform`, `createPalette`, `hexToHsl`, `hexToInt`, `hexToRgb`, `hslToHex`, `hslToInt`, `hslToRgb`, `rgbToHex`, `rgbToHsl`, and `rgbToInt`. This overhaul aims to provide a more streamlined and comprehensive suite of tools for color manipulation across various projects.

--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -1,18 +1,74 @@
 {
-  "type": "module",
-  "sideEffects": false,
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch"
-  },
   "name": "@unshared/color",
+  "type": "module",
+  "license": "MIT",
+  "sideEffects": false,
+  "author": "Stanley Horwood <stanley@hsjm.io>",
   "bugs": "https://github.com/shorwood/unshared/issues",
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shorwood/unshared.git",
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/color"
   },
-  "author": "Stanley Horwood <stanley@hsjm.io>",
-  "license": "MIT"
+  "exports": {
+    "./createColorHsl": {
+      "require": "./dist/createColorHsl.cjs",
+      "types": "./dist/createColorHsl.d.ts",
+      "import": "./dist/createColorHsl.js"
+    },
+    "./createColorPalette": {
+      "require": "./dist/createColorPalette.cjs",
+      "types": "./dist/createColorPalette.d.ts",
+      "import": "./dist/createColorPalette.js"
+    },
+    "./createColorSrgb": {
+      "require": "./dist/createColorSrgb.cjs",
+      "types": "./dist/createColorSrgb.d.ts",
+      "import": "./dist/createColorSrgb.js"
+    },
+    "./hexToSrgb": {
+      "require": "./dist/hexToSrgb.cjs",
+      "types": "./dist/hexToSrgb.d.ts",
+      "import": "./dist/hexToSrgb.js"
+    },
+    "./hslToSrgb": {
+      "require": "./dist/hslToSrgb.cjs",
+      "types": "./dist/hslToSrgb.d.ts",
+      "import": "./dist/hslToSrgb.js"
+    },
+    "./srgbToHex": {
+      "require": "./dist/srgbToHex.cjs",
+      "types": "./dist/srgbToHex.d.ts",
+      "import": "./dist/srgbToHex.js"
+    },
+    "./srgbToHsl": {
+      "require": "./dist/srgbToHsl.cjs",
+      "types": "./dist/srgbToHsl.d.ts",
+      "import": "./dist/srgbToHsl.js"
+    },
+    "./srgbToInteger": {
+      "require": "./dist/srgbToInteger.cjs",
+      "types": "./dist/srgbToInteger.d.ts",
+      "import": "./dist/srgbToInteger.js"
+    },
+    "./types": {
+      "require": "./dist/types.cjs",
+      "types": "./dist/types.d.ts",
+      "import": "./dist/types.js"
+    },
+    ".": {
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
+  "dependencies": {
+    "@unshared/math": "workspace:*"
+  }
 }
