feat(color): set version to 1.0.0
Set the initial version of the `@unshared/color` package to `1.0.0`. This marks the first official release of the package, establishing a baseline for future updates and releases.

--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@unshared/color",
   "type": "module",
+  "version": "1.0.0",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
