chore: include `@types/node` in compiler options
Included `@types/node` in the `types` array of the `tsconfig.json` to ensure Node.js type definitions are available project-wide. This change facilitates development by providing type checking and IntelliSense for Node.js APIs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@unshared/*": ["./packages/*"]
     },
     "types": [
+      "@types/node",
       "vitest/globals",
       "vitest/importMeta"
     ],
