feat(types): add `MethodDecorator` type with generic support
Introduced a new `MethodDecorator` type in the `types` package that enhances the existing method decoration capabilities. This new type is generic, allowing for the specification of the method's signature being decorated. This enhancement aids in maintaining type safety and clarity when decorating class methods. The inclusion of this type allows developers to explicitly define the expected method signature, improving the development experience by ensuring that the decorated methods adhere to the specified type constraints.

Additionally, the `types` package and its exports have been updated to include this new `MethodDecorator` type, ensuring it's readily available for use in projects. This update represents a significant improvement in the utility and flexibility of method decorators within TypeScript projects.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -178,6 +178,9 @@
     "./MaybeReadonly": {
       "types": "./dist/MaybeReadonly.d.ts"
     },
+    "./MethodDecorator": {
+      "types": "./dist/MethodDecorator.d.ts"
+    },
     "./Mixins": {
       "types": "./dist/Mixins.d.ts"
     },
