chore(tsconfig): enable decorator support in TypeScript configuration
Enable support for decorators in the project by setting `emitDecoratorMetadata` and `experimentalDecorators` to true in the `tsconfig.json`. This change is necessary to support the development and use of decorators throughout the project, aligning with recent additions such as the `Memoize` decorator and the `MethodDecorator` type.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "target": "ESNext",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "paths": {
