--- a/package.json
+++ b/package.json
@@ -22,40 +22,41 @@
     "commit:lint": "commitlint --edit",
     "publish:ci": "tsx ./scripts/publish.ts",
     "preinstall": "node ./scripts/forcePnpm.js",
-    "postinstall": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@commitlint/config-angular": "19.0.3",
-    "@commitlint/config-conventional": "19.0.3",
-    "@commitlint/config-pnpm-scopes": "19.0.0",
+    "@commitlint/config-angular": "19.1.0",
+    "@commitlint/config-conventional": "19.1.0",
+    "@commitlint/config-pnpm-scopes": "19.1.0",
     "@rollup/plugin-terser": "0.4.4",
-    "@types/eslint": "8.56.5",
+    "@types/eslint": "8.56.6",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "20.11.25",
+    "@types/node": "20.11.30",
     "@unshared/eslint-config": "workspace:*",
     "@unshared/fs": "workspace:*",
     "@unshared/functions": "workspace:*",
     "@unshared/unplugin": "workspace:*",
-    "@vitest/coverage-v8": "1.3.1",
-    "@vitest/ui": "1.3.1",
-    "@vitest/utils": "1.3.1",
-    "axios": "1.6.7",
-    "commitlint": "19.0.3",
+    "@vitest/coverage-v8": "1.4.0",
+    "@vitest/ui": "1.4.0",
+    "@vitest/utils": "1.4.0",
+    "axios": "1.6.8",
+    "commitlint": "19.2.1",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
-    "happy-dom": "13.7.3",
+    "happy-dom": "14.0.0",
     "husky": "9.0.11",
     "js-yaml": "4.1.0",
-    "memfs": "4.7.7",
-    "openai": "4.28.4",
-    "rollup": "4.12.1",
+    "memfs": "4.8.0",
+    "openai": "4.29.2",
+    "rollup": "4.13.0",
+    "rollup-plugin-cleanup": "3.2.1",
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-esbuild": "6.1.1",
     "tsx": "4.7.1",
     "types-pkg-json": "1.2.1",
     "types-tsconfig": "2.0.2",
     "typescript": "5.4.2",
-    "vitest": "1.3.1"
+    "vitest": "1.4.0"
   },
   "eslintConfig": {
     "extends": [
