chore: enable `allowSyntheticDefaultImports` option
Added the `allowSyntheticDefaultImports` flag to the TypeScript configuration to allow default imports from modules with no default export. This change facilitates easier integration with certain third-party libraries and enhances developer flexibility when importing modules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "vitest/globals",
       "vitest/importMeta"
     ],
-    "strict": true
+    "strict": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "packages",
