fix(reactive): fixed circular dependencies issue
Addressed an issue with circular dependencies among reactive utilities by moving shared symbols to a new `constants.ts` file. This change ensures that imports among `computed.ts`, `isComputed.ts`, `isReactive.ts`, `isReference.ts`, `reactive.ts`, `reference.ts`, `unwrap.ts`, and `watch.ts` no longer create circular dependencies. Additionally, adjusted the `package.json` to correctly reflect the new file structure and ensure proper module resolution. This fix enhances the maintainability and scalability of the reactive package by simplifying its structure and resolving potential issues with module loading.

--- a/packages/reactive/package.json
+++ b/packages/reactive/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git@github.com:shorwood/unshared.git",
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/reactive"
   },
   "exports": {
@@ -16,6 +16,11 @@
       "require": "./dist/computed.cjs",
       "types": "./dist/computed.d.ts",
       "import": "./dist/computed.js"
+    },
+    "./constants": {
+      "require": "./dist/constants.cjs",
+      "types": "./dist/constants.d.ts",
+      "import": "./dist/constants.js"
     },
     "./isComputed": {
       "require": "./dist/isComputed.cjs",
