feat!(reactivity): renamed package from `reactive` to `reactivity`
Renamed the package to better reflect its purpose and align with naming conventions. This included updating all internal references, package.json details, and directory names. The `package.json` and repository directory paths were updated to reflect the new package name `@unshared/reactivity`. This change is breaking due to the renaming of the package affecting imports and dependencies.

--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@unshared/reactive",
+  "name": "@unshared/reactivity",
   "type": "module",
   "license": "MIT",
   "sideEffects": false,
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:shorwood/unshared.git",
-    "directory": "packages/reactive"
+    "directory": "packages/reactivity"
   },
   "exports": {
     "./computed": {
