feat(types): add `ObjectLike` type
Introduced a new `ObjectLike` type in the `types` package. This type represents an object with unknown properties, enhancing flexibility in type definitions across packages. It can be used in situations where the shape of the object is not fully known or can vary, providing a more precise and descriptive way to type these objects compared to using `any` or `{ [key: string]: unknown }`. Additionally, updated the `index.ts` to export this new type and modified the `package.json` to include it in the type definitions, ensuring it is properly recognized and utilized in TypeScript projects.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -238,6 +238,9 @@
     "./NumberPositive": {
       "types": "./dist/NumberPositive.d.ts"
     },
+    "./ObjectLike": {
+      "types": "./dist/ObjectLike.d.ts"
+    },
     "./Optional": {
       "types": "./dist/Optional.d.ts"
     },
