feat(functions): add `attach` function
Added a new `attach` function to the `functions` package. This function moves the first parameter of a given function to `this`, effectively attaching the function to an object as if it were a method. This enhancement is particularly useful for functions that expect a specific object as their first parameter, allowing them to leverage the `this` context instead.

The implementation involved creating the `attach.ts` file, defining the `attach` function along with its TypeScript type `Attached`, and updating the exports in both `index.ts` and `package.json` to include the new functionality. Additionally, the `bindThis.ts` file, which was a work in progress and similar in purpose to `attach`, has been removed as part of this change to avoid redundancy and confusion.

This addition simplifies the process of converting standalone functions into methods of objects, making the library more versatile and useful for functional programming patterns in JavaScript and TypeScript.

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,6 +13,11 @@
     "directory": "packages/functions"
   },
   "exports": {
+    "./attach": {
+      "require": "./dist/attach.cjs",
+      "types": "./dist/attach.d.ts",
+      "import": "./dist/attach.js"
+    },
     "./attempt": {
       "require": "./dist/attempt.cjs",
       "types": "./dist/attempt.d.ts",
