feat(types): add `OmitNever` type and update exports
Added a new type `OmitNever` in the `types` package to omit properties with the value of `never` from the object types. This utility type will help in creating cleaner and more precise types by automatically excluding properties that should not be present based on conditional types.

Updated the `index.ts` to export the new `OmitNever` type and ensure it's correctly bundled and accessible. Additionally, adjusted the `package.json` exports section to reflect these changes, ensuring that the new type is correctly resolved when the package is imported.

This update further enhances the types package, making it more versatile and useful for developers dealing with complex type manipulations.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,6 +16,9 @@
     "./Any": {
       "types": "./dist/Any.d.ts"
     },
+    "./Bind": {
+      "types": "./dist/Bind.d.ts"
+    },
     "./BooleanAnd": {
       "types": "./dist/BooleanAnd.d.ts"
     },
@@ -36,9 +39,6 @@
     },
     "./BooleanXor": {
       "types": "./dist/BooleanXor.d.ts"
-    },
-    "./BoundThis": {
-      "types": "./dist/BoundThis.d.ts"
     },
     "./CaseInsensitive": {
       "types": "./dist/CaseInsensitive.d.ts"
@@ -237,6 +237,9 @@
     },
     "./NumberPositive": {
       "types": "./dist/NumberPositive.d.ts"
+    },
+    "./OmitNever": {
+      "types": "./dist/OmitNever.d.ts"
     },
     "./Optional": {
       "types": "./dist/Optional.d.ts"
