--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -139,13 +139,7 @@
     "README.md",
     "LICENSE.md"
   ],
-  "scripts": {
-    "build": "pnpm build:indexes && pnpm build:bundle && pnpm build:packageJson",
-    "build:bundle": "tsx ../../scripts/build.ts",
-    "build:indexes": "tsx ../../scripts/buildIndexes.ts",
-    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts"
-  },
-  "devDependencies": {
+  "dependencies": {
     "@unshared/types": "workspace:*"
   }
 }
